test/src/e2e_vm_tests/test_programs/should_fail/arith_overflow/u64_sub_const_eval_underflow/src/main.sw
script;

const RESULT: u64 = u64::min() - 1;

fn main() -> bool {
    log(RESULT);

    true
}
